--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_dotenv: ^5.2.1
   date_field: ^6.0.3+1
-
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
