--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   date_field: ^6.0.3+1
   google_sign_in: ^6.3.0
   flutter_svg: ^2.1.0
+  pie_chart: ^5.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
